crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__current_analysis_unreachable_code_has_unnecessary_hint_tag.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 27
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Code is unreachable under the current analysis",
      "tags": [
        1
      ]
    }
  ]
}
