crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__excluded.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: excluded_diagnostics
---
{"items": [], "kind": "full"}
