crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__module_scope_unused_import_is_reported_when_used_from_another_file.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 19
        },
        "end": {
          "line": 0,
          "character": 25
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Import `helper` is unused",
      "tags": [
        1
      ]
    }
  ],
  "kind": "full"
}
