crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__stack_size.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 814
        },
        "end": {
          "line": 2,
          "character": 815
        }
      },
      "severity": 1,
      "code": "invalid-syntax",
      "source": "ty",
      "message": "Source is too deeply nested"
    }
  ]
}
