crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__unreachable_code_has_unnecessary_hint_tag.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 23
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Code is always unreachable",
      "tags": [
        1
      ]
    }
  ],
  "kind": "full"
}
