crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__unreachable_code_suppresses_unused_import_hint.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 4
        },
        "end": {
          "line": 2,
          "character": 13
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Code is always unreachable",
      "tags": [
        1
      ]
    }
  ],
  "kind": "full"
}
